syntax = "proto3";

option csharp_namespace = "ConsoleHelper";

package kingdom;

// The greeting service definition.
service KingdomRpc {
    // Sends a greeting
  rpc GetAllKingdoms (HelloRequest) returns (HelloReply);

  rpc GetKingdomWithTechologies (HelloRequest) returns (stream HelloReply);
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
